--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -78,7 +78,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hash Maps"
+    "# Hash Maps\n",
+    "\n",
+    "## Problems\n",
+    "### Sets\n",
+    "#### Longest Consecutive Sequence\n",
+    "Given an unsorted array of integers `nums`, return the length of the longest consecutive elements sequence.\n",
+    "\n",
+    "You must write an algorithm that runs in $O(n)$ time.\n",
+    "\n",
+    "**Example 1:**\n",
+    "```\n",
+    "Input: nums = [100,4,200,1,3,2]\n",
+    "Output: 4\n",
+    "```\n",
+    "Explanation: The longest consecutive elements sequence is [1, 2, 3, 4]. Therefore its length is 4.\n",
+    "\n",
+    "**Example 2:**\n",
+    "```\n",
+    "Input: nums = [0,3,7,2,5,8,4,6,0,1]\n",
+    "Output: 9\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def LCS(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    - The number of occurrence of a number is irrelevant\n",
+    "    - Membership check and removal of sets is O(1)\n",
+    "    \"\"\"\n",
+    "    s = set(nums)\n",
+    "    ret = 0\n",
+    "\n",
+    "    while s:  # O(n) - check all the sequences in the set\n",
+    "        ele = s.pop() # choose a random starting point\n",
+    "        curr = 1\n",
+    "\n",
+    "        # Find the start and end of the sequence ele belongs to\n",
+    "        left, right = ele - 1, ele + 1  \n",
+    "\n",
+    "        while left in s:\n",
+    "            curr += 1\n",
+    "            s.remove(left)\n",
+    "            left -= 1\n",
+    "        while right in s:\n",
+    "            curr += 1\n",
+    "            s.remove(right)\n",
+    "            right += 1\n",
+    "\n",
+    "        # Take max of all sequences\n",
+    "        ret = max(ret, curr)\n",
+    "    return ret"
    ]
   },
   {
@@ -103,7 +158,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.0"
   }
  },
