--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -79,6 +79,32 @@
    "metadata": {},
    "source": [
     "# Hash Maps\n",
+    "## Sets\n",
+    "### Runtime Complexity\n",
+    "| Operation                 | Method/Expression          | Average Case | Worst Case     |\n",
+    "|---------------------------|----------------------------|--------------|----------------|\n",
+    "| Adding an element         | `set.add(element)`         | $O(1)$     | $O(n)$       |\n",
+    "| Getting an arbitrary element | `set.pop()`         | $O(1)$     | $O(n)$       |\n",
+    "| Removing an element       | `set.remove(element)`      | $O(1)$     | $O(n)$       |\n",
+    "| Removing an element       | `set.discard(element)`     | $O(1)$     | $O(n)$       |\n",
+    "| Checking membership       | `element in set`           | $O(1)$     | $O(n)$       |\n",
+    "\n",
+    "&nbsp;\n",
+    "\n",
+    "| Operation                 | Method/Expression          | Average Case | Worst Case     |\n",
+    "|---------------------------|----------------------------|--------------|----------------|\n",
+    "| Set union                 | `set1 \\| set2`              | $O(len(set1) + len(set2))$ | $O(len(set1) + len(set2))$ |\n",
+    "| Set union                 | `set1.union(set2)`         | $O(len(set1) + len(set2))$ | $O(len(set1) + len(set2))$ |\n",
+    "| Set intersection          | `set1 & set2`              | $O(min(len(set1), len(set2)))$ | $O(min(len(set1), len(set2)))$ |\n",
+    "| Set intersection          | `set1.intersection(set2)`  | $O(min(len(set1), len(set2)))$ | $O(min(len(set1), len(set2)))$ |\n",
+    "| Set difference            | `set1 - set2`              | $O(len(set1))$ | $O(len(set1))$ |\n",
+    "| Set difference            | `set1.difference(set2)`    | $O(len(set1))$ | $O(len(set1))$ |\n",
+    "| Set symmetric difference  | `set1 ^ set2`              | $O(len(set1) + len(set2))$ | $O(len(set1) + len(set2))$ |\n",
+    "| Set symmetric difference  | `set1.symmetric_difference(set2)` | $O(len(set1) + len(set2))$ | $O(len(set1) + len(set2))$ |\n",
+    "| Creating a set            | `set(iterable)`            | $O(len(iterable))$ | $O(len(iterable))$ |\n",
+    "\n",
+    "\n",
+    "## Hash Tables (dictionary)\n",
     "\n",
     "## Problems\n",
     "### Sets\n",
