--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1,11 +1,98 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict, deque\n",
+    "from heapq import *"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Arrays\n",
     "## Two-Pointer\n",
+    "### Two Sum II (sorted input)\n",
+    "Given a *1-indexed* array of integers `numbers` that is already sorted in **non-decreasing** order, find two numbers such that they add up to a specific target number. Let these two numbers be `numbers[index1]` and `numbers[index2]` where `1 <= index1 < index2 <= numbers.length`.\n",
+    "\n",
+    "Return the indices of the two numbers, `index1` and `index2`, added by one as an integer array [index1, index2] of length 2.\n",
+    "\n",
+    "The tests are generated such that there is exactly one solution. You may not use the same element twice.\n",
+    "\n",
+    "Your solution must use only constant extra space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def two_sum_sorted(numbers: list[int], target: int) -> list[int]:\n",
+    "    left, right = 0, len(numbers) - 1\n",
+    "\n",
+    "    while left <= right:\n",
+    "        if numbers[left] + numbers[right] == target:\n",
+    "            return [left+1, right+1]\n",
+    "\n",
+    "        if numbers[left] + numbers[right] > target:\n",
+    "            right -= 1\n",
+    "        else:\n",
+    "            left += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "### 3Sum\n",
+    "Given an integer array `nums`, return all the triplets `[nums[i], nums[j], nums[k]]` where `nums[i] + nums[j] + nums[k] == 0`, and the indices `i, j and k` are all distinct.\n",
+    "\n",
+    "The output should not contain any duplicate triplets. You may return the output and the triplets in any order.\n",
+    "\n",
+    "**Example 1:**\n",
+    "```\n",
+    "Input: nums = [-1,0,1,2,-1,-4]\n",
+    "Output: [[-1,-1,2],[-1,0,1]]\n",
+    "```\n",
+    "Explanation:\n",
+    "nums[0] + nums[1] + nums[2] = (-1) + 0 + 1 = 0.\n",
+    "\n",
+    "\n",
+    "nums[1] + nums[2] + nums[4] = 0 + 1 + (-1) = 0.\n",
+    "\n",
+    "nums[0] + nums[3] + nums[4] = (-1) + 2 + (-1) = 0.\n",
+    "\n",
+    "The distinct triplets are [-1,0,1] and [-1,-1,2].\n",
+    "\n",
+    "**Example 2:**\n",
+    "```\n",
+    "Input: nums = [0,1,1]\n",
+    "Output: []\n",
+    "```\n",
+    "Explanation: The only possible triplet does not sum up to 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def three_sum(nums: list[int]) -> list[list[int]]:\n",
+    "  pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Sliding Window\n",
     "\n",
@@ -160,6 +247,39 @@
     "        # Take max of all sequences\n",
     "        ret = max(ret, curr)\n",
     "    return ret"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hash Tables\n",
+    "#### Two Sum\n",
+    "Given an array of integers `nums` and an integer `target`, return indices of the two numbers such that they add up to `target`.\n",
+    "\n",
+    "You may assume that each input would have exactly one solution, and you may not use the same element twice.\n",
+    "\n",
+    "You can return the answer in any order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def two_sum(nums: list[int], target: int) -> list[list[int]]:\n",
+    "  d = defaultdict(list)\n",
+    "\n",
+    "  for i in range(len(nums)):  # O(n)\n",
+    "      d[nums[i]].append(i)\n",
+    "  \n",
+    "  for k in d: # O(n)\n",
+    "      if target - k in d:\n",
+    "          if k != target - k:\n",
+    "              return [d[k][0], d[target-k][0]] \n",
+    "          elif len(d[k]) > 1:\n",
+    "              return [d[k][0], d[k][1]]"
    ]
   },
   {
