--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -81,12 +81,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def three_sum(nums: list[int]) -> list[list[int]]:\n",
-    "  pass"
+    "  ans = set()  # Avoid duplicates\n",
+    "  nums.sort()\n",
+    "  x = 0\n",
+    "\n",
+    "  while x < len(nums) and nums[x] <= 0:  # O(n)\n",
+    "      # x has to be negative or 0 to yield a solution\n",
+    "\n",
+    "      left, right = x + 1, len(nums) - 1\n",
+    "\n",
+    "      while left < right:  # O(n)\n",
+    "          if nums[left] + nums[right] == -nums[i]:\n",
+    "              ans.add((nums[x], nums[left], nums[right]))\n",
+    "              left += 1\n",
+    "              right -= 1\n",
+    "          elif nums[left] + nums[right] > -nums[x]:\n",
+    "              right -= 1\n",
+    "          else:\n",
+    "              left += 1\n",
+    "      x += 1\n",
+    "\n",
+    "  return ans"
    ]
   },
   {
