WIP: only works if alternating zeros

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -113,6 +113,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Max Water Container\n",
+    "You are given an integer array heights where `heights[i]` represents the height of the $i^{th}$ bar.\n",
+    "\n",
+    "You may choose any two bars to form a container. Return the maximum amount of water a container can store."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_area(heights: list[int]) -> int:\n",
+    "    left, right = 0, len(heights) - 1\n",
+    "    area = 0\n",
+    "\n",
+    "    while left < right:\n",
+    "        curr = (right - left) * min(heights[left], heights[right])\n",
+    "        area = max(area, curr)\n",
+    "\n",
+    "        # The shorter edge limits the area, so we move that side forward\n",
+    "        if heights[left] > heights[right]:\n",
+    "            right -= 1\n",
+    "        else:\n",
+    "            left += 1\n",
+    "    \n",
+    "    return area"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Sliding Window\n",
     "\n",
